kubernetes/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  labels:
    app: payday
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: payday
  template:
    metadata:
      labels:
        app: payday
    spec:
      containers:
      - name: customers-service
        image: malikaliyev94/customers-service:latest
        ports:
        - containerPort: 9000
          protocol: TCP
