kubernetes/deployment-transactions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-service
  labels:
    app: transactions-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-service
  template:
    metadata:
      labels:
        app: transactions-service
    spec:
      containers:
      - name: transactions-service
        image: malikaliyev94/transactions-service:v1
        ports:
        - containerPort: 8080
          protocol: TCP
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
          protocol: TCP
