kubernetes/accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
spec:
  selector:
    app: payday
  ports:
    - name: port1
      protocol: TCP
      port: 9001
      targetPort: 9001
  # type: NodePort
