kubernetes/entry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entry-service
spec:
  selector:
    app: payday
  ports:
    - name: port1
      protocol: TCP
      port: 4000
      targetPort: 4000
  # type: NodePort
