kubernetes/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-database
  labels:
    app: payday
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: payday
    tier: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-database
  labels:
    app: payday
spec:
  selector:
    matchLabels:
      app: payday
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: payday
        tier: database
    spec:
      containers:
        - image: mysql:5.7
          name: mysql-database
          ports:
            - containerPort: 3306
              name: db
