kubernetes/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  selector:
    app: payday
  ports:
    - name: port1
      protocol: TCP
      port: 9003
      targetPort: 9003
  # type: NodePort
