kubernetes/service-customers.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: payday
  ports:
    - name: port1
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: NodePort
