kubernetes/transactions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
spec:
  selector:
    app: payday
  ports:
    - name: port1
      protocol: TCP
      port: 9002
      targetPort: 9002
    - name: port2
      protocol: TCP
      port: 27017
      targetPort: 27017
  # type: NodePort
