kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: payday.local
    http:
      paths:
      - path: /
        backend:
          serviceName: entry-service
          servicePort: 4000
      # - path: /
      #   backend:
      #     serviceName: transactions-service
      #     servicePort: 8080
